scripts/nullaway/wpi/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8.txt
../wpi/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Student.java:258: error: [NullAway] dereferenced expression dormRoom is @Nullable
        Dorm d = dormRoom.getDorm();
                         ^
    (see http://t.uber.com/nullaway )
../wpi/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Student.java:325: error: [NullAway] dereferenced expression s2 is @Nullable
            s2.met.add(this);
              ^
    (see http://t.uber.com/nullaway )
../wpi/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Student.java:338: error: [NullAway] dereferenced expression s2 is @Nullable
            s2.connections.add(this);
              ^
    (see http://t.uber.com/nullaway )
../wpi/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Student.java:354: error: [NullAway] dereferenced expression s is @Nullable
        if (this.race == s.race) {
                          ^
    (see http://t.uber.com/nullaway )
../wpi/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/UpperclassHousingSelection.java:83: error: [NullAway] dereferenced expression upperclassmen is @Nullable
        for (int x = upperclassmen.size() - 1; x >= 0; x--) {
                                  ^
    (see http://t.uber.com/nullaway )
5 errors
